--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: Give Me A Name
+Theme Name: MALIGNA
 Theme URI:
 Description:
-Version: 0.0.1
-Author: Interglobal Vision
-Author URI: http://interglobal.vision
+Version: 0.2.1
+Author: MALIGNA
+Author URI: http://maligna.net
 */
