--- a/css/site.styl
+++ b/css/site.styl
@@ -48,6 +48,7 @@ h1
 
 h2
   font-size: 2em
+  margin-bottom: 15px
   //line-height: 1.4
 
 h3
@@ -149,6 +150,9 @@ nav a
 #footer
   width: 100%
 
+// Single
+.attachment-single-featured
+  margin-bottom: 15px
 
 // MEDIA QUERIES
 
