--- a/css/site.styl
+++ b/css/site.styl
@@ -162,6 +162,7 @@ nav a
   width: 100%
 
 // Single
+.attachment-archive-featured,
 .attachment-single-featured
   display: block
   margin-bottom: 15px
